changed methods to use db instead of json files